part3/3.07.DbCommitment/be-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-be
  namespace: todos-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-be
  template:
    metadata:
      labels:
        app: todos-be
    spec:
      containers:
        - name: todos-be
          image: BE_IMAGE
